@@ -1,1 +1,1 @@
-^(?!lib/|inc/|t/|xt/|Makefile.PL$|README$|MANIFEST$|Changes$|META.(?:yml|json)$)
+^(?!lib/|inc/|t/|xt/|Makefile.PL$|README$|LICENSE|MANIFEST$|Changes$|META.(?:yml|json)$)
